objects/ASI_KOR_SR_Payment_Settlement_Header__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_BM_Payment_Settlement_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BM CA Payment Settlement</label>
        <referenceTo>ASI_KOR_BM_Payment_Settlement_Header__c</referenceTo>
        <relationshipName>ASI_KOR_SR_Payment_Settlement_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Approval_Status__c</fullName>
        <formula>text(ASI_KOR_BM_Payment_Settlement_Header__r.ASI_KOR_Status__c )</formula>
        <label>Branch Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch__c</fullName>
        <formula>Owner:User.ASI_KOR_User_Branch_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Amount_excl_Basic__c</fullName>
        <label>CA Amount (excl. Basic)</label>
        <summarizedField>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_CA_Amount_excl_Basic__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_SR_Payment_Settlement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Cut_off_Date__c</fullName>
        <formula>ASI_KOR_BM_Payment_Settlement_Header__r.ASI_KOR_Cut_off_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cut-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_KOR_SR_Payment_Settlement_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Basic_Amount__c</fullName>
        <label>Final VI</label>
        <summarizedField>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_Final_Basic_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_SR_Payment_Settlement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_CA_Amount_excl_Basic__c</fullName>
        <label>Final CA Amount (excl. Basic)</label>
        <summarizedField>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_Final_CA_Amount_excl_Basic__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_SR_Payment_Settlement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Total_Amount__c</fullName>
        <formula>ASI_KOR_Final_Basic_Amount__c + ASI_KOR_Final_CA_Amount_excl_Basic__c + ASI_KOR_Pre_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Month__c</fullName>
        <defaultValue>IF(MONTH(Today())=1, &quot;12&quot;, TEXT(MONTH(Today())-1))</defaultValue>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Pre_Payment_Amount__c</fullName>
        <label>Pre-Payment Amount</label>
        <summarizedField>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_Pre_Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_SR_Payment_Settlement_Detail__c.ASI_KOR_SR_Payment_Settlement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Region__c</fullName>
        <formula>Owner:User.ASI_KOR_User_Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Regional_Approval_Status__c</fullName>
        <formula>text(ASI_KOR_BM_Payment_Settlement_Header__r.ASI_KOR_RSD_Payment_Settlement__r.ASI_KOR_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Manager_Email__c</fullName>
        <label>SYS_Manager_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Payment_Code__c</fullName>
        <formula>Text(ASI_KOR_Year__c) + Text(ASI_KOR_Month__c) + OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Payment Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Payment_Month_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Payment Settlement Exists for Year-Month</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved by BM</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_Pending__c</fullName>
        <label>Total VI (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Year__c</fullName>
        <defaultValue>IF(MONTH(Today())=1, TEXT(YEAR(Today())-1), TEXT(YEAR(Today())))</defaultValue>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Settlement (SR)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201703_March</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>201703 March</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201704_April</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>201704 April</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201705_May</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>201705 May</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201706_June</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <label>201706 June</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201708_Aug</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>8</value>
        </filters>
        <label>201708 Aug</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201709_Sep</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>9</value>
        </filters>
        <label>201709 Sep</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201710_Oct</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>201710 Oct</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201711</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <label>201711 Nov</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201712_Dec</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <label>201712 Dec</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_February</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>201702 February</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_January</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>201701 January</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_Jul</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>7</value>
        </filters>
        <label>201707 July</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201801_Jan</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>201801 Jan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201802_Feb</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>201802 Feb</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SRS-{00000000}</displayFormat>
        <label>SR Payment Settlement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Settlements (SR)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>